@@ -7,6 +7,7 @@ Bugs fixed
 * #1788: graphviz extension raises exception when caption option is present.
 * #1789: ``:pyobject:`` option of ``literalinclude`` directive includes following
   lines after class definitions
+* #1790: ``literalinclude`` strips empty lines at the head and tail
 
 
 Release 1.3.1 (released Mar 17, 2015)
